syntax = "proto3";
package api_def;
option go_package = "/api_def";
//grant role
message UserGrantRole {
  message Input {
    string  UserName = 2;
    repeated  string  Roles = 4;
  }

  message Output {
  }
}